deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingressdemo
  namespace: demo
spec:
  selector:
    matchLabels:
      app: ingressdemo
  template:
    metadata:
      labels:
        app: ingressdemo
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: saiyam911/ingressdemo:sha-6eb611b
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ingressdemo
  namespace: demo
spec:
  selector:
    app: ingressdemo
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  type: NodePort
  
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: demo-app-ingress
  namespace: demo
spec:
  rules:
  - host: demo.e65f444e-e201-40bd-b0f4-7a18c3601d00.k8s.civo.com
    http:
      paths:
      - backend:
          service:
            name: ingressdemo
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - demo.e65f444e-e201-40bd-b0f4-7a18c3601d00.k8s.civo.com
    secretName: demo
